--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
   ],
   "require": {
     "php": ">=5.6",
-    "guzzlehttp/guzzle": "^6.3"
+    "guzzlehttp/guzzle": "^6.3",
+    "symfony/http-foundation": "^2.7|^3.0|^4.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.7.27"
