--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
   "require": {
     "php": ">=5.6",
     "guzzlehttp/guzzle": "^6.3",
-    "symfony/http-foundation": "^2.7|^3.0|^4.0"
+    "symfony/http-foundation": "^3.4.10"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.7.27"
