--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
   "authors": [
     {
       "name": "aguage",
-      "email": "aguage@gmail.com"
+      "email": "mr.huangyouzhi@gmail.com"
     }
   ],
   "require": {
